Fixed main - now index.js

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "opkit",
   "version": "1.0.0",
   "description": "Library of DevOps Functions",
-  "main": "opkit.js",
+  "main": "index.js",
   "scripts": {
     "test": "test"
   },
