--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "botkit"
   ],
   "author": "Bandwidth",
-  "license": "ISC",
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/inetCatapult/opkit/blob/master/LICENSE.md"
+    }
+  ],
   "bugs": {
     "url": "https://github.com/inetCatapult/opkit/issues"
   },
