Stubbing out AWS queries
Created some unit tests mocking out AWS requests.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/inetCatapult/opkit#readme",
   "devDependencies": {
+    "aws-sdk-mock": "^1.1.0",
     "chai": "^3.5.0",
     "mocha": "^2.4.5"
   },
