--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "aws-promised": "^2.13.0",
     "aws-sdk": "^2.3.10",
-    "botkit": "^0.1.1"
+    "botkit": "^0.1.1",
+    "sinon": "^1.17.4"
   }
 }
