--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Library of DevOps Functions",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./test/*"
+    "test": "mocha ./test/*",
     "coverage": "istanbul cover _mocha -- -R spec"
   },
   "repository": {
