--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "devDependencies": {
     "aws-sdk-mock": "^1.1.0",
     "chai": "^3.5.0",
-    "istanbul": "^0.4.3",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "istanbul": "^0.4.3"
   },
   "dependencies": {
     "aws-promised": "^2.13.0",
