--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 before_script: chmod 0777 ./node_modules/.bin/mocha
-script: npm run coverage
+before_script: npm run coverage
 language: node_js
 node_js:
   - 0.12
