--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha ./test/*",
-    "coverage": "istanbul cover _mocha"
+    "cover": "istanbul cover _mocha"
   },
   "repository": {
     "type": "git",
