--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "aws-sdk-mock": "^1.1.0",
     "chai": "^3.5.0",
     "grunt": "^1.0.1",
+    "grunt-mocha-istanbul": "^4.0.2",
     "istanbul": "^0.4.3",
     "lodash": "^4.12.0",
     "mocha": "^2.4.5"
