--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 before_script: chmod 0777 ./node_modules/.bin/mocha
-after_success: ./publish.sh
+after_success: 
+  - chmod 0777 ./publish.sh
+  - ./publish.sh
 language: node_js
 node_js:
   - 0.12
