--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
-before_script: chmod 0777 ./node_modules/.bin/mocha
+before_script: 
+  - chmod 0777 ./node_modules/.bin/mocha
+  - chmod 0777 ./node_modules/.bin/jsdoc
 after_success: 
   - chmod 0777 ./publish.sh
   - ./publish.sh
