--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 before_script: 
   - chmod 0777 ./node_modules/.bin/mocha
+script:
+  - grunt default
+  - grunt doc
 after_success: 
   - chmod 0777 ./publish.sh
   - ./publish.sh
