--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "aws-sdk-mock": "^1.1.0",
     "chai": "^3.5.0",
     "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.0.0",
     "grunt-jsdoc": "^2.0.0",
     "grunt-mocha-istanbul": "^4.0.2",
     "istanbul": "^0.4.3",
