--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "aws-promised": "^2.13.0",
     "aws-sdk": "^2.3.10",
     "bluebird": "^3.4.0",
+    "fs-promise": "^0.5.0",
     "mongoose": "^4.5.0",
     "natural": "^0.4.0",
     "slack-client": "^2.0.6",
