--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "aws-sdk": "^2.3.10",
     "bluebird": "^3.4.0",
     "fs-promise": "^0.5.0",
-    "mongoose": "^4.5.0",
+    "mongodb-bluebird": "^0.1.1",
     "natural": "^0.4.0",
     "slack-client": "^2.0.6",
     "winston": "^2.2.0"
