--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "fs-promise": "^0.5.0",
     "mongodb-bluebird": "^0.1.1",
     "natural": "^0.4.0",
+    "redis": "^2.6.2",
     "slack-client": "^2.0.6",
     "winston": "^2.2.0"
   }
