--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "istanbul": "^0.4.3",
     "lodash": "^3.10.1",
     "mocha": "^2.4.5",
+    "mock-require": "^1.3.0",
     "sinon": "^1.17.4",
     "sinon-as-promised": "^4.0.0"
   },
