--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "pg-promise": "^4.8.1",
     "redis": "^2.6.2",
     "slack-client": "^2.0.6",
+    "url-parse": "^1.1.1",
     "winston": "^2.2.0"
   }
 }
