--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "opkit",
   "version": "0.0.1",
-  "description": "Library of DevOps Functions",
+  "description": "An Erector Set For Devops Bots",
   "main": "index.js",
   "scripts": {
     "test": "grunt"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/inetCatapult/opkit.git"
+    "url": "git+https://github.com/bandwidthcom/opkit.git"
   },
   "keywords": [
     "botkit"
@@ -17,13 +17,13 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/inetCatapult/opkit/blob/master/LICENSE.md"
+      "url": "https://github.com/bandwidthcom/opkit/blob/master/LICENSE.md"
     }
   ],
   "bugs": {
-    "url": "https://github.com/inetCatapult/opkit/issues"
+    "url": "https://github.com/bandwidthcom/opkit/issues"
   },
-  "homepage": "https://github.com/inetCatapult/opkit#readme",
+  "homepage": "https://github.com/bandwidthcom/opkit#readme",
   "devDependencies": {
     "chai": "^3.5.0",
     "fs-extra": "^0.30.0",
