--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "opkit",
-  "version": "1.0.0",
+  "version": "1.0.0a",
   "description": "An Erector Set For Devops Bots",
   "main": "index.js",
   "scripts": {
