--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sinon-as-promised": "^4.0.0"
   },
   "dependencies": {
+    "@slack/client": "^5.0.2",
     "aws-promised": "^2.13.0",
     "aws-sdk": "^2.3.10",
     "bluebird": "^3.4.0",
@@ -49,7 +50,6 @@
     "natural": "^0.5.0",
     "pg-promise": "^4.8.1",
     "redis": "^2.6.2",
-    "slack-client": "^2.0.6",
     "url-parse": "^1.1.1",
     "winston": "^2.2.0"
   }
